--- a/Oblig-1-ITPE3200/Oblig-1-ITPE3200.csproj
+++ b/Oblig-1-ITPE3200/Oblig-1-ITPE3200.csproj
@@ -10,10 +10,12 @@
     <None Remove="Models\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="wwwroot\" />
+    <Content Remove="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Remove="wwwroot\" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.4" />
   </ItemGroup>
 </Project>
