--- a/Oblig-1-ITPE3200/Oblig-1-ITPE3200.csproj
+++ b/Oblig-1-ITPE3200/Oblig-1-ITPE3200.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.4" />
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="3.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DTO\" />
