Added login, hashing and salting for users. Aded user and user model. Added loggin in repository. Tested with client. Fails on changing page. Server side gives right response and client gets message, does not change page.

--- a/Oblig-1-ITPE3200/Oblig-1-ITPE3200.csproj
+++ b/Oblig-1-ITPE3200/Oblig-1-ITPE3200.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Oblig-1-ITPE3200' " />
+
+  <ItemGroup>
+    <Compile Remove="DAL\RNGCryptoServiceProvider.cs" />
+  </ItemGroup>
   <ItemGroup>
     <None Remove="Controllers\" />
     <None Remove="Models\" />
