--- a/Oblig-1-ITPE3200/Properties/launchSettings.json
+++ b/Oblig-1-ITPE3200/Properties/launchSettings.json
@@ -12,14 +12,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://localhost:5001"
     }
   },
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:24139",
+      "applicationUrl": "http://localhost:4430",
       "sslPort": 44335
     }
   }
